@@ -3,7 +3,7 @@ matplotlib
 nbsphinx
 numpy
 pytest
-pandas>=1.0.4
+pandas==1.1.3
 pint-pandas
 jupyter_client
 ipykernel
